--- a/styles.css
+++ b/styles.css
@@ -312,8 +312,8 @@ body.dark-theme {
 
 .home__blob {
   position: relative;
-  width: 200px;
-  height: 290px;
+  width: 150px;
+  height: 190px;
   background-color: var(--body-color);
   border: 2px solid var(--text-color-light);
   justify-self: center;
@@ -323,8 +323,8 @@ body.dark-theme {
 }
 
 .home__john {
-  width: 350px;
-  height: 470px;
+  width: 80%;
+  height: 70%;
   background: var(--gradient-color);
   border-radius: 5.5rem;
   overflow: hidden;
